# dagit.github.io

./: .gitignore  CNAME  README.md  about.html  contact.html  index.html  posts.html  rss.xml
blag/: Makefile  about.md  blag.cabal  contact.md  index.html  site.hs
blag/css/: default.css  solarized.css
blag/posts/: 2006-08-17-learn-math-tips.md  2006-09-01-simple-unit-testing.md  2008-08-21-darcs2-push-performance.md  2008-10-24-hamming-was-right.md  2008-10-24-understanding-darcs-commute.md  2008-10-28-darcs-hacking-sprint.md  2008-11-10-phantom-types.md  2009-03-25-type-correct-changes.md  2010-06-06-delimited-continuations-and-version-control.md  2010-06-10-delimited-continuations-and-version-control-2.md  2010-08-01-takusen-tutorial.md  2010-08-29-fun-pointless-code-metrics.md  2010-09-19-composability-laziness-testing.md  2011-03-17-picking-gui-library.md  2012-01-18-keeping-science-in-software-development.md  2012-03-23-life-at-galois.md  2012-03-30-tmux-ssh-agent.md  2013-01-19-installing-agda-on-windows.md  2013-04-29-opencl-and-language-c-quote.md  2013-08-03-getting-started-with-ghc-hacking.md  2013-10-13-trying-out-latex2html5.md  2013-12-03-learning-dependent-types.md  2014-09-08-History-of-the-MOS-6502.md
blag/templates/: default.html  disqus.html  post.html
css/: default.css  solarized.css
posts/: 2006-08-17-learn-math-tips.html  2006-09-01-simple-unit-testing.html  2008-08-21-darcs2-push-performance.html  2008-10-24-hamming-was-right.html  2008-10-24-understanding-darcs-commute.html  2008-10-28-darcs-hacking-sprint.html  (+17 more)
tags/: 6502.html  c.html  (+32 more)
